# pydemy

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENCE  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  validate_tests.py
.github/: dependabot.yml
.github/workflows/: python-publish.yml  release_pypi.yml  release_test_pypi.yml
examples/: async_usage.py  sync_usage.py
pydemy/: __init__.py  _async_client.py  _base_client.py  _client.py  client.py  exceptions.py
pydemy/models/: __init__.py  _chapter.py  _course.py  _course_category.py  _course_review.py  _course_subcategory.py  _lecture.py  _quiz.py  _user.py  chapter.py  course.py  course_review.py  course_subcategory.py  lecture.py
pydemy/models/_filters/: course_filters.py  review_filters.py
pydemy/models/filters/: course_filters.py  review_filters.py
pydemy/models/mixins/: serializers.py
tests/: README.md  __init__.py  conftest.py  test_async_client.py  test_client.py  test_context_managers.py  test_error_handling.py  test_models.py
