[project]
name = "pydemy"
version = "0.1"
description = "A Python library for interacting with the Udemy Affiliate API."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "requests~=2.32.3",
    "pydantic~=2.8.2",
]
authors = [
    {name = "Robel Asefa", email = "mertigenet@gmail.com"}
]
maintainers = [
    {name = "Robel Asefa", email = "mertigenet@gmail.com"}
]

[project.optional-dependencies]
dev = ["black", "isort", "ruff", "pylint"]

[tool.black]
line-length = 99
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.ruff]
fix = false
output-format = "grouped"
line-length = 99